[gd_scene load_steps=4 format=3 uid="uid://7eyy2ew4udo6"]

[ext_resource type="Texture2D" uid="uid://dagsrjhec3hj5" path="res://assets/sprites/background/BG_Piramide-01.png" id="1_ed5e6"]
[ext_resource type="Script" uid="uid://2qy1vdca4lwr" path="res://scripts/ui/main_menu.gd" id="1_f8hk5"]
[ext_resource type="PackedScene" uid="uid://dp3conn5ww2sv" path="res://scenes/ui/menu_controllers.tscn" id="2_f8hk5"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_f8hk5")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_ed5e6")
metadata/_edit_use_anchors_ = true

[node name="MenuControllers" parent="." instance=ExtResource("2_f8hk5")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="button_0_pressed" from="MenuControllers" to="." method="_on_menu_button_0_pressed"]
[connection signal="button_1_pressed" from="MenuControllers" to="." method="_on_menu_button_1_pressed"]
[connection signal="button_2_pressed" from="MenuControllers" to="." method="_on_menu_button_2_pressed"]
